yaml/sandbox/denyquestion/deploy-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  strategy: {}
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: busybox
        name: busybox
        command: ["sleep", "3600"]
        resources: {}
status: {}
