yaml/sandbox/denyquestion/tester.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: tester
  name: tester
spec:
  containers:
  - image: busybox
    name: tester
    command: ["sleep", "3600"]
